[package]
name = "audio-visualizer"
version = "0.1.0"
description = "A real-time audio visualizer with system tray support to send audio data to the LED matrix."
authors = ["sshcrack"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
rustfft = "6.4.0"
dirs = "6.0.0"
toml = "0.8.23"
futures = "0.3.31"
anyhow = "1.0.98"
tokio = { version = "1.36.0", features = ["full"] }

